--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,11 @@
   "homepage": "https://github.com/TCrispm/ticTacToe-server#readme",
   "dependencies": {
     "dotenv": "^16.0.0",
-    "express": "^4.17.2"
+    "express": "^4.17.2",
+    "fs": "0.0.1-security",
+    "nodemon": "^2.0.15"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "morgan": "^1.10.0"
+  }
 }
